@@ -162,6 +162,9 @@ Working version
 - #882: Add fold_left, fold_right, exists and for_all to String/Bytes
   (Yotam Barnoy, review by Alain Frisch and Jeremy Yallop)
 
+- #4070, #10398: small optimization of Stdlib.{frexp,modf}.
+  (Markus Mottl, Nicolás Ojeda Bär, review by Gabriel Scherer)
+
 ### Other libraries:
 
 - #10047: Add `Unix.realpath`
